# EEMU

./: README.md  dist_eval.py  main.py  requirements.txt  utils.py
GTTF/: framework.py  utils.py
cpp_extensions/: CMakeLists.txt  binding.cpp  mp_test.py  sampler.h  sampling_ops.cpp  test  test.py  verify_samples.py
data/: base.py  datareader.py  ml1m_dataloader.py  structs.py
model/: common.py  ml1m_models.py  sparsenn.py  synthesis_models.py
